Created New My class create functionality  without passport Authentication and authorizeAdminUser
